2009-06-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Fill constraints vector in result class.
	* include/roboptim/core/plugin/cfsqp.hh: Add fillConstraints
	prototype.
	* src/roboptim-core-cfsqp-plugin.cc: Fill constraints
	vector in result.
	* tests/optimization-problem-1.stdout: Regenerate.

2009-06-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Make test suite more flexible.
	* tests/optimization-problem-1.cc,
	* tests/plugin.cc,
	* tests/simple.cc: Do not display solver warnings
	on cout to avoid failure if the warning is different.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove Libtool warning.
	* tests/Makefile.am: Here.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Regenerate output on 32 bits machine.
	* tests/plugin.stdout,
	* tests/simple.stdout: Here.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix test suite.
	* tests/hs071.hh,
	* tests/optimization-problem-1.cc,
	* tests/plugin.cc,
	* tests/simple.cc: Fix test suite.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Do not use boost::make_shared.
	* tests/hs071.hh,
	* tests/optimization-problem-1.cc: Here.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Regenerate output.
	Output has been updated in roboptim-core.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Use new constraint system.
	* include/roboptim/core/plugin/cfsqp.hh,
	* src/roboptim-core-cfsqp-plugin.cc,
	* tests/hs071.hh,
	* tests/optimization-problem-1.cc,
	* tests/plugin.cc,
	* tests/simple.cc: Use new generic constraint
	system.

2009-06-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix build-chain when headers are in non-standard directories.
	* src/Makefile.am,
	* tests/Makefile.am: Add ROBOPTIMCORE_CFLAGS to CPPFLAGS.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* doc/sf-upload.sh.in: Here.
