@@ -1,5 +1,13 @@
 2009-06-25  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Fix constraints' final value computation.
+	* src/roboptim-core-cfsqp-plugin.cc: Fix fillConstraint
+	to take into account the fact that constraints are transformed
+	to be expressed as g(x) <= 0 or g(x) >= 0.
+	* tests/optimization-problem-1.stdout: Regenerate.
+
+2009-06-25  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Fill constraints vector in result class.
 	* include/roboptim/core/plugin/cfsqp.hh: Add fillConstraints
 	prototype.
